--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,3 +1,13 @@
+@use "sass:map";
+@use "./variables.scss" as *;
+
+.pageContent {
+  grid-column: 2 / 3;
+  border: 1px solid hotpink;
+  padding: 0 map.get($size-modules, "2");
+}
+
 .color {
   color: greenyellow;
+  height: 300px;
 }
