--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,7 @@
-@use 'sass:map';
-@use './variables' as *;
+@use "sass:map";
+@use "./variables" as *;
+
+// RESETS
 
 * {
   padding: 0;
@@ -12,15 +14,15 @@ html {
 
 body {
   width: 100vw;
-  font-size: map.get($size-modules, '1');
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: map.get($size-modules, "1");
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+ul {
+  list-style: none;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
-
-
-
