--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,13 +1,8 @@
 @use "sass:map";
+@use "./resets.scss" as *;
 @use "./variables" as *;
-
 // RESETS
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 html {
   font-size: 10px;
 }
@@ -17,12 +12,4 @@ body {
   font-size: map.get($size-modules, "1");
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-ul {
-  list-style: none;
-}
-a {
-  color: inherit;
-  text-decoration: none;
 }
