--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -5,16 +5,23 @@
 
 .wrapper {
   position: relative;
-  width: 100vw;
-}
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 
-.main {
-  padding-top: 400px; // TEMPORARY
   display: grid;
 
   @each $size in $size-list {
     @include breakpoint($size) {
       grid-template-columns: goldGridColumns(100vw, map.get($global-column-ratios, $size));
+      grid-template-areas: map.get($global-grid-areas, $size);
     }
+    background-color: rgba(128, 128, 128, 0.171);
   }
+}
+
+.main {
+
+  padding-top: goldSize(100vh, 5);
+  grid-area: main;
 }
