--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -3,54 +3,65 @@
 @use "styles/mixins" as *;
 @use "styles/golden-ratio" as *;
 
-$comp-z-depth: map.get($z-depth, "foreground");
-
-.navbar {
-  position: fixed;
-  display: grid;
-  justify-items: end;
-  z-index: $comp-z-depth;
-
-  @each $size in $size-list {
-    @include breakpoint($size) {
-      grid-template-columns: goldGridColumns(100vw, map.get($global-column-ratios, $size));
-    }
-  }
-
-  background-color: hsla(160, 100%, 75%, 0.205);
-}
-
-// MAIN MEMBERS
+///////REMOVE THIS AFTER INSERTIN ACCESSIBILITY COMPONENT
 .accesibilityWidget {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: red;
-  z-index: $comp-z-depth + 1;
+  z-index: map.get($z-depth, "foreground") + 1;
+}
+
+.navbar {
+  //fixed workaround
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  grid-area: navbar;
+  z-index: map.get($z-depth, "foreground");
+
 }
 
 .navContainer {
-  grid-column: 1 / 2;
-  text-align: right;
-  padding-right: map.get($size-modules, "2");
-  background-color: aqua;
-}
-
-.navMenu {
-  grid-column: 2 / 3;
-  display: none;
-}
-
-.hamburger {
-  width: 100px;
-  height: 100px;
+  position: relative;
+  right: 0;
+  top: goldSize(100vh, 6);
+  height: goldSize(100vh, 3);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: flex-end;
 
-  & > span {
-    width: 100%;
-    height: 25%;
-    background-color: black;
-  }
+  padding-right: map.get($size-au-modules, 2);
+
+  text-transform: uppercase;
+  text-align: right;
+
+  // background-color: rgb(220, 255, 255);
 }
+
+.logotype {
+  width: 50%;
+}
+
+.activeLink {
+  color: $color-primary;
+}
+// .navMenu {
+//   grid-column: 2 / 3;
+//   display: none;
+// }
+
+// .hamburger {
+//   width: 100px;
+//   height: 100px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+
+//   & > span {
+//     width: 100%;
+//     height: 25%;
+//     background-color: black;
+//   }
+// }
