--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@use 'sass:list';
 @use 'styles/golden-ratio' as *;
 @use 'styles/variables' as *;
 
@@ -8,10 +9,20 @@
   }
 }
 
-@mixin typography($size-index, $weight-index) {
+// @mixin typography($size-index, $weight-index) {
+//   $size-base: map.get($size-au-modules, $size-index);
+//   font-size: $size-base;
+//   line-height: $size-base * 1.6;
+//   letter-spacing: $size-base * -0.02;
+//   font-weight: map.get($font-weights, $weight-index);
+// }
+
+@mixin typography($elementProps) {
+  $size-index: list.nth($elementProps, 1);
+  $weight-index: list.nth($elementProps, 2);
   $size-base: map.get($size-au-modules, $size-index);
   font-size: $size-base;
-  line-height: $size-base * 1.6;
+  line-height: $size-base * 1;
   letter-spacing: $size-base * -0.02;
   font-weight: map.get($font-weights, $weight-index);
 }
