Todo: ServerSideProps debugging

--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -5,9 +5,9 @@
   height: 6000px;
 }
 ///////////////////////////
-.pageWrapper {
-  background-color: #dddddd;
-}
+// .pageWrapper {
+//   background-color: #dddddd34;
+// }
 
 
 .projectContainer {
