--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,6 +10,7 @@ $color-tetriary: #2b71ed;
 $color-danger: #ff9b17;
 $color-white: #fff;
 $color-light-gray: #f6f6f6;
+$color-dark-gray: #aaaaaa;
 $color-dark: #0F1031;
 
 $size-list: (
