Added Drag and Drop

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,9 +5,9 @@
 
 // ---- COLORS ----
 $color-primary: #1bd367;
-$color-secondary: #f12552;
+$color-secondary: #ff9b17;
 $color-tetriary: #2b71ed;
-$color-danger: #ff9b17;
+$color-danger: #f12552;
 $color-white: #ffffff;
 $color-light-gray: #f6f6f6;
 $color-dark-gray: #aaaaaa;
